<resources>
    <string name="app_name">NewsPaper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">https://vnexpress.net</string>
    <string name="nav_header_desc">VNExpress</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu1">Home</string>
    <string name="menu2">News</string>
    <string name="menu3">World</string>
    <string name="menu4">Business</string>
    <string name="menu5">Startup</string>
    <string name="menu6">Entertainment</string>
    <string name="menu7">Sport</string>
    <string name="menu8">Law</string>
    <string name="menu9">Education</string>
    <string name="menu10">Health</string>
    <string name="menu11">Life</string>
    <string name="menu12">Travel</string>
    <string name="menu13">Science</string>
    <string name="menu14">Digitizing</string>
    <string name="menu15">Vehicle</string>
    <string name="menu16">Opinion</string>
    <string name="menu17">Talk</string>
    <string name="menu18">Laugh</string>
    <string name="save">Save</string>
    <string name="messWait">Loading ...</string>
    <string name="newsSave">Save readings</string>
    <string name="newsClick">"Recent readings "</string>
    <string name="remove">Remove</string>
    <string name="removeAll">Remove All</string>
    <string name="complete">Complete !</string>
    <string name="view">View</string>
    <string name="NoInternet">No Internet</string>
    <string name="zoomIn">Zoom In</string>
    <string name="zoomOut">Zoom Out</string>
    <string name="Language">Language</string>
    <string name="VietNamese">Vietnamese</string>
    <string name="English">English</string>
    <string name="offline">Offline</string>
    <string name="messDialog">Please check the Internet</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="viewMode">View Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="search">Search</string>
    <string name="onBack">Press back again to Leave!</string>
</resources>
