<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu1"
        android:icon="@mipmap/home"
        android:id="@+id/menu1"/>
    <item android:title="@string/menu2"
        android:icon="@mipmap/news"
        android:id="@+id/menu2"/>
    <item android:title="@string/menu3"
        android:icon="@mipmap/world"
        android:id="@+id/menu3"/>
    <item android:title="@string/menu4"
        android:icon="@mipmap/bussines"
        android:id="@+id/menu4"/>
    <item android:title="@string/menu5"
        android:icon="@mipmap/startup"
        android:id="@+id/menu5"/>
    <item android:title="@string/menu6"
        android:icon="@mipmap/entertainment"
        android:id="@+id/menu6"/>
    <item android:title="@string/menu7"
        android:icon="@mipmap/sports"
        android:id="@+id/menu7"/>
    <item android:title="@string/menu8"
        android:icon="@mipmap/law"
        android:id="@+id/menu8"/>
    <item android:title="@string/menu9"
        android:icon="@mipmap/education"
        android:id="@+id/menu9"/>
    <item android:title="@string/menu10"
        android:icon="@mipmap/health"
        android:id="@+id/menu10"/>
    <item android:title="@string/menu11"
        android:icon="@mipmap/life"
        android:id="@+id/menu11"/>
    <item android:title="@string/menu12"
        android:icon="@mipmap/travel"
        android:id="@+id/menu12"/>
    <item android:title="@string/menu13"
        android:icon="@mipmap/brain"
        android:id="@+id/menu13"/>
    <item android:title="@string/menu14"
        android:icon="@mipmap/digi"
        android:id="@+id/menu14"/>
    <item android:title="@string/menu15"
        android:icon="@mipmap/car"
        android:id="@+id/menu15"/>
    <item android:title="@string/menu16"
        android:icon="@mipmap/comment"
        android:id="@+id/menu16"/>
    <item android:title="@string/menu17"
        android:icon="@mipmap/talk"
        android:id="@+id/menu17"/>
    <item android:title="@string/menu18"
        android:icon="@mipmap/laughing"
        android:id="@+id/menu18"/>
</menu>
