<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:orderInCategory="100"
        android:title="@string/newsSave"
        app:showAsAction="never" />

    <item
        android:id="@+id/item2"
        android:orderInCategory="100"
        android:title="@string/newsClick"
        app:showAsAction="never" />

    <item
        android:orderInCategory="2"
        android:title="@string/Language">
        <menu>
            <item
                android:icon="@drawable/vietnam"
                android:id="@+id/Vietnamese"
                android:title="@string/VietNamese"/>
            <item
                android:icon="@drawable/usato"
                android:id="@+id/English"
                android:title="@string/English"/>
        </menu>
    </item>
</menu>
